properties and user files updated

--- a/src/test/resources/environment.properties
+++ b/src/test/resources/environment.properties
@@ -1,4 +1,6 @@
 moodle.server.address=http://10.0.0.54
+#moodle.server.address=http://localhost/moodle
+#moodle.server.address=http://kiseta.net/moodle
 moodle.server.valid.username=admin
 moodle.server.valid.password=Admin2@18
 moodle.server.invalid.username=adminasd
